components/_Achievement.css
@layer components {
  .achievement-container {
    @apply flex flex-col justify-center items-start w-full;
    > h3 {
      @apply text-lg md:text-xl text-gray-200 font-bold w-full hover:text-blue-200 cursor-pointer;
    }
    .expand-div {
      @apply flex flex-col justify-start items-start mx-auto mt-2 md:mt-10 min-h-[200px] md:min-h-[500px] w-11/12;
      > p {
        @apply text-[0.85rem] md:text-base mb-3 text-white;
      }
      > img {
        @apply block max-w-[500px] self-center;
      }
      > video {
        @apply block self-center max-w-[500px];
      }
    }
    > div:last-child {
      @apply w-full h-0.5 mt-2 bg-white;
    }
  }

  .achievement {
    @apply w-full flex flex-col justify-center items-center mt-32 relative z-50;
    > h2 {
      @apply text-3xl text-white;
    }
    > div:first-of-type {
      @apply w-8/12 sm:w-1/2 h-px mt-2 bg-white mb-10;
    }
  }
  .achieve-list-container {
    @apply flex flex-col gap-y-10 md:gap-y-20 mx-10 py-10 w-10/12 md:w-8/12;
  }
}

